# llm_wiki

./: .gitignore  README.md  vite.config.ts
server/: Cargo.toml
server/migrations/: 0001_initial_config.sql  0002_project_registry.sql
server/src/: auth.rs  config.rs  db.rs  files.rs  graph.rs  http.rs  lib.rs  main.rs  projects.rs  search.rs  vectorstore.rs
src/: App.tsx  main.tsx
src-tauri/src/: api_server.rs  clip_server.rs  lib.rs  server_bind.rs
src-tauri/src/agent/: context.rs  skills.rs  tools.rs
src-tauri/src/commands/: external_search.rs  mod.rs  project.rs  search.rs
src/commands/: fs.ts
src/components/: mermaid-diagram.tsx
src/components/auth/: owner-auth-screen.test.ts  owner-auth-screen.tsx
src/components/chat/: chat-panel.tsx
src/components/editor/: file-preview.tsx  wiki-editor.tsx  wiki-reader.tsx
src/components/graph/: graph-view.tsx
src/components/layout/: app-layout-visibility.test.ts  app-layout.tsx  content-area.tsx  file-tree.tsx  icon-sidebar.tsx  preview-panel.tsx  research-panel-nav.test.ts  research-panel-nav.ts  sidebar-panel.tsx
src/components/project/: create-project-dialog.test.ts  create-project-dialog.tsx  welcome-screen.tsx
src/components/review/: review-view.tsx
src/components/search/: search-view.tsx
src/components/settings/: settings-view.tsx
src/components/settings/sections/: api-server-section.tsx
src/i18n/: en.json  zh.json
src/lib/: anytxt-search.test.ts  anytxt-search.ts  embedding.test.ts  embedding.ts  markdown-image-resolver.test.ts  markdown-image-resolver.ts  raw-source-resolver.ts  search-rrf.test.ts  search.scenarios.test.ts  search.ts  theme.ts  web-search.test.ts  web-search.ts  wiki-graph.ts
src/platform/: web-api.test.ts  web-api.ts
src/stores/: chat-store.test.ts  chat-store.ts  wiki-store.ts
src/types/: wiki.ts
