[package]
name = "llm-wiki-server"
version = "0.6.0"
edition = "2021"
description = "LLM Wiki Personal Server"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
hex = "0.4"
mime_guess = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
